qRound: do not do operation with double when qreal is float

0.5 is double a literal, and they force computation on double
while it would be more optimized on qreal if qreal is a float

Task-number: QTBUG-16673
Reviewed-by: Thierry